# etl_api_brasil.io

./: .gitignore  README.md  main.py  pyproject.toml
dataset/bronze/ano_mes=2012_01/: dados_2012_01.parquet
dataset/bronze/ano_mes=2012_02/: dados_2012_02.parquet
dataset/bronze/ano_mes=2012_03/: dados_2012_03.parquet
dataset/bronze/ano_mes=2012_04/: dados_2012_04.parquet
dataset/bronze/ano_mes=2012_05/: dados_2012_05.parquet
dataset/bronze/ano_mes=2012_06/: dados_2012_06.parquet
dataset/bronze/ano_mes=2012_07/: dados_2012_07.parquet
dataset/bronze/ano_mes=2012_08/: dados_2012_08.parquet
dataset/bronze/ano_mes=2012_09/: dados_2012_09.parquet
dataset/bronze/ano_mes=2012_10/: dados_2012_10.parquet
dataset/bronze/ano_mes=2012_11/: dados_2012_11.parquet
dataset/bronze/ano_mes=2012_12/: dados_2012_12.parquet
dataset/bronze/ano_mes=2013_01/: dados_2013_01.parquet
dataset/bronze/ano_mes=2013_02/: dados_2013_02.parquet
dataset/bronze/ano_mes=2013_03/: dados_2013_03.parquet
dataset/bronze/ano_mes=2013_08/: dados_2013_08.parquet
dataset/bronze/ano_mes=2013_09/: dados_2013_09.parquet
dataset/bronze/ano_mes=2013_10/: dados_2013_10.parquet
dataset/bronze/ano_mes=2013_11/: dados_2013_11.parquet
dataset/bronze/ano_mes=2013_12/: dados_2013_12.parquet
dataset/bronze/ano_mes=2014_01/: dados_2014_01.parquet
dataset/bronze/ano_mes=2014_02/: dados_2014_02.parquet
dataset/bronze/ano_mes=2014_03/: dados_2014_03.parquet
notebooks/: EDA.ipynb
services/: auxilar.py  request.py  silver_transformer.py
(+111 files in other folders)
