[project]
name = "atividade-1-engenharia"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "duckdb>=1.4.1",
    "flask>=3.1.2",
    "pandas>=2.3.3",
    "pyarrow>=18.0.0",
    "pyspark[sql]>=4.0.1",
    "python-dotenv>=1.0.0",
    "requests>=2.32.0",
]
